162.Fixed Getme Template and Scrollbar SCSS

--- a/assets/scss/pages/userDetail.scss
+++ b/assets/scss/pages/userDetail.scss
@@ -9,7 +9,7 @@
   .uploaded-videos__container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(50%, 100%));
-    grid-auto-rows: minmax(20px, auto);
+    grid-template-rows: 0.3fr 9.7fr;
     gap: 10px;
     flex-wrap: wrap;
     background-color: black;
@@ -57,6 +57,43 @@
           }
         }
       }
+    }
+    .uploaded__videos {
+      scrollbar-color: #ff9a9e #f5f5f5;
+    }
+    .uploaded__videos::-webkit-scrollbar {
+      width: 12px;
+      background-color: white;
+      border-radius: 10px;
+    }
+    .uploaded__videos::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        from(#ff9a9e),
+        color-stop(99%, #fecfef),
+        to(#fecfef)
+      );
+      background-image: -webkit-linear-gradient(
+        bottom,
+        #ff9a9e 0%,
+        #fecfef 99%,
+        #fecfef 100%
+      );
+      background-image: linear-gradient(
+        to top,
+        #ff9a9e 0%,
+        #fecfef 99%,
+        #fecfef 100%
+      );
+    }
+    .uploaded__videos::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      background-color: #f5f5f5;
+      border-radius: 10px;
     }
   }
   .user-profile__container {
