--- a/assets/scss/partials/commentBlock.scss
+++ b/assets/scss/partials/commentBlock.scss
@@ -181,3 +181,39 @@
     }
   }
 }
+.comments__view-box {
+  scrollbar-color: #ff9a9e #f5f5f5;
+}
+.comments__view-box::-webkit-scrollbar {
+  width: 12px;
+  background-color: white;
+}
+.comments__view-box::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#ff9a9e),
+    color-stop(99%, #fecfef),
+    to(#fecfef)
+  );
+  background-image: -webkit-linear-gradient(
+    bottom,
+    #ff9a9e 0%,
+    #fecfef 99%,
+    #fecfef 100%
+  );
+  background-image: linear-gradient(
+    to top,
+    #ff9a9e 0%,
+    #fecfef 99%,
+    #fecfef 100%
+  );
+}
+.comments__view-box::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
